# bravobot

./: CMakeLists.txt  Clion Setup  Protype_HinBrain_Sketch.  Protype_HinBrain_Sketch.cpp  README.md  camerasetupdocumentation  how_to_run_rosserial  odroidsensorconfigs  sensors.launch  testlz.py
FunRobo-GPSViewer/: CMakeLists.txt  README.md  package.xml
FunRobo-GPSViewer/assets/: mainwindow.ui
FunRobo-GPSViewer/bags/: gps-test.bag
FunRobo-GPSViewer/include/funrobo_gpsview/: Worker.h  mainwindow.h
FunRobo-GPSViewer/src/: Worker.cpp  main.cpp  mainwindow.cpp
arbiter/: CMakeLists.txt  package.xml
arbiter/src/: arbiter.py  arbiter_twist.py
camera/: CMakeLists.txt  camera_calibration.yaml
camera_proc/: CMakeLists.txt  package.xml
camera_proc/src/: .camera_cmd.cpp.swp  .camera_cmd.swp  .color_track_red.cpp.swp  camera_cmd.cpp  camera_move.cpp  camera_proc.cpp  camera_pub.cpp  color_move.cpp  color_proc.cpp  color_track.cpp  color_track_purple.cpp  color_track_red.cpp  obst_detect.cpp
hindbrain/: IR_stop.ino  e_stop.c  e_stop.cpp  e_stop.h  hindbrain.h  hindbrain.ino  motors.cpp  motors.h  neopixels.cpp  neopixels.h  pins.h  rc_passthrough.c  rc_passthrough.cpp  rc_passthrough.h  run.c  run.cpp  run.h  soft_stop.c  soft_stop.cpp  soft_stop.h
hindbrain/cmd_vel_unit_test/: cmd_vel_unit_test.ino  pins.h
hindbrain/hindbrain_beta/: IR.ino  NeoPixel.ino  ROS.ino  defines.h  global.h  hindbrain_beta.ino  includes.h  motors.ino  pins.h
hindbrain/servo_blink/: servo_blink.ino
hindbrain/test_IR/: test_IR.ino
hindbrain_beta/: EStop.ino  IR.ino  NeoPixel.ino  ROS.ino  defines.h  global.h  hindbrain_beta.ino  includes.h  motors.ino  pins.h
lidar/ros_lidar_data/ros_lidar_data/: CMakeLists.txt  package.xml
lidar/ros_lidar_data/ros_lidar_data/src/: main.cpp  velocitizer.cpp  velocitizer.h
lidar_obst/: CMakeLists.txt  package.xml
lidar_obst/src/: lidar_obst_wall_follow.cpp
listener/: package.xml
listener/src/: listener.cpp
motor_test_code/: motor_test_code.ino
rosbags/: 2016-11-18_around_the_o_1.bag
sunny_lidar/: CMakeLists.txt
sunny_lidar/src/: lidar_node.cpp
talker/: CMakeLists.txt  package.xml
talker/src/: talker.cpp
twist_pub/: twist_pub.py
wall_follow/: CMakeLists.txt  package.xml
wall_follow/src/: temp  wall_follow.cpp  wall_follow.cpp.save  wall_follow.cpp.save.2
wall_follow_minimal/: CMakeLists.txt  package.xml
wall_follow_minimal/src/: wall_follow.cpp
waypoint/: CMakeLists.txt  package.xml
waypoint/src/: Factorizer.cpp  Factorizer.h  WaypointFinder.cpp  WaypointFinder.h  distcalc.cpp  main.cpp
